Add `no_std` support
- Switched to `hashbrown::HashMap` from `std::collections::HashMap`. This dependency was already in-tree and is only used internally, so no public facing change.
- Switched to deriving `thiserror::Error` instead of manual `Error` implementation. This is done to preserve the 1.65 MSRV (since `thiserror` correctly handles choosing between `core::error::Error` and `std::error::Error` based on compiler version). This dependency is used in tests already, but is now a proper dependency.
- Ensured `saphyr-parser` and `saphyr` compile for `no_std` targets such as `wasm32v1-none` and `x86_64-unknown-none`. Added this to CI to ensure compatibility doesn't regress.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,10 @@ edition = "2021"
 rust-version = "1.65.0"
 
 [workspace.dependencies]
-arraydeque = "0.5.1"
+arraydeque = { version = "0.5.1", default-features = false }
 encoding_rs = { version = "0.8.33" }
+# Keep in sync with hashlink to reduce dependency duplication
+hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
 hashlink = "0.10"
 libtest-mimic = "0.8.1"
 miette = { version = "7.5.0", features = ["fancy"] }
@@ -42,7 +44,7 @@ rustyline = "16.0.0"
 saphyr = { path = "saphyr" }
 saphyr-bench = { path = "bench" }
 saphyr-parser = { path = "parser" }
-thiserror = "2.0.12"
+thiserror = { version = "2.0.12", default-features = false }
 
 [workspace.lints.rust]
 unsafe_op_in_unsafe_fn = "deny"
