--- a/saphyr/Cargo.toml
+++ b/saphyr/Cargo.toml
@@ -26,6 +26,7 @@ encoding_rs = { workspace = true, optional = true }
 hashlink = { workspace = true }
 ordered-float = { workspace = true }
 saphyr-parser = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 quickcheck = { workspace = true }
