--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,8 @@ edition = "2021"
 rust-version = "1.65.0"
 
 [workspace.dependencies]
-arraydeque = { version = "0.5.1", default-features = false }
+arraydeque = "0.5.1"
 encoding_rs = { version = "0.8.33" }
-# Keep in sync with hashlink to reduce dependency duplication
-hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
 hashlink = "0.10"
 libtest-mimic = "0.8.1"
 miette = { version = "7.5.0", features = ["fancy"] }
@@ -44,7 +42,7 @@ rustyline = "16.0.0"
 saphyr = { path = "saphyr" }
 saphyr-bench = { path = "bench" }
 saphyr-parser = { path = "parser" }
-thiserror = { version = "2.0.12", default-features = false }
+thiserror = "2.0.12"
 
 [workspace.lints.rust]
 unsafe_op_in_unsafe_fn = "deny"
